GNOME Bugzilla – Bug 740133
window-actor: Do not request unredirection when destroyed
Last modified: 2014-11-18 15:10:52 UTC
See patch. This prevents a crash, as the compositor will pick the top window actor, get its MetaWindow, and set unredirection for the MetaWindowActor returned by meta_window_get_compositor_private() (which is NULL at that point). Also see downstream bug at https://bugzilla.redhat.com/show_bug.cgi?id=1149409.
Created attachment 290725 [details] [review] window-actor: Do not request unredirection when destroyed WindowActors can outlive their corresponding window to animate unmap. Unredirecting the actor does not make sense in that case, so make sure to not request it.
Review of attachment 290725 [details] [review]: lgtm
Attachment 290725 [details] pushed as 6e25c37 - window-actor: Do not request unredirection when destroyed